(library
 ; Main library module name
 (name Basic_lib_doc)
 ; Public name is: pacakge_name.library_name
 ; The package name is the name of the opam file at root of the project.
 (public_name ocaml-by-example.lib)
 ; Provide a list of modules for the library.
 ; This is only necessary if there modules in the current directory are used in
 ; multiple libraries or executables.
 (modules Basic_lib_doc))

(executable
 (name Main)
 (public_name main)
 ; Provide a list of modules for the library.
 ; This excludes the Lib module and uses :standard, i.e., all modules in the
 ; current directory.
 (modules :standard \ Basic_lib_doc)
 ; Use the locally defined library as a dependency.
 (libraries ocaml-by-example.lib))
